# optimizing_seed_search

./: .gitignore  CMakeLists.txt  README.md  binary_ternary.cpp  binary_ternary.h  exponetial.cpp  exponetial.h  gene.fa  gene.txt  humanMito.txt  interpolation.cpp  interpolation.h  main.cpp  openfile.cpp  openfile.h  test.fa  test.txt
